tests/idris2/builtin/builtin004/expected
1/1: Building Test (Test.idr)
Error: Natural builtin does not support lazy types.

Test:6:1--6:23
 2 | data MyNat
 3 |     = S (Inf MyNat)
 4 |     | Z
 5 | 
 6 | %builtin Natural MyNat
     ^^^^^^^^^^^^^^^^^^^^^^

Main> Bye for now!
